force-app/main/default/objects/Milestone1_Task__c/fields/Project_Use_Case__c.field-meta.xml
<CustomField>
    <fullName>Project_Use_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Use Case</label>
    <referenceTo>Milestone1_Project__c</referenceTo>
    <relationshipLabel>Tasks</relationshipLabel>
    <relationshipName>Tasks</relationshipName>
    <type>Lookup</type>
</CustomField>