force-app/main/default/objects/Milestone1_Task__c/fields/Task_Type__c.field-meta.xml
<CustomField>
    <fullName>Task_Type__c</fullName>
    <label>Task Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Demo Stock</fullName>
            </value>
            <value>
                <fullName>Demo Personalized</fullName>
            </value>
            <value>
                <fullName>POC</fullName>
            </value>
            <value>
                <fullName>Accompaniment</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>