force-app/main/default/objects/Milestone1_Task__c/fields/Use_Case_Stage__c.field-meta.xml
<CustomField>
    <fullName>Use_Case_Stage__c</fullName>
    <label>Use Case Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Entendimiento</fullName>
            </value>
            <value>
                <fullName>Implementación</fullName>
            </value>
            <value>
                <fullName>Integraciones</fullName>
            </value>
            <value>
                <fullName>Entrega/ estabilización</fullName>
            </value>
            <value>
                <fullName>Aprobado cliente</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>