force-app/main/default/objects/Milestone1_Task__c/recordTypes/Presales.recordType-meta.xml
<RecordType>
    <fullName>Presales</fullName>
    <active>true</active>
    <label>Presales</label>
</RecordType>